@@ -1,44 +1,70 @@
 package org.mtvs.backend.checklist.service;
 
+import jakarta.transaction.Transactional;
+import org.mtvs.backend.user.entity.User;
+import org.mtvs.backend.user.repository.UserRepository;
 import org.mtvs.backend.checklist.dto.CheckListRequest;
 import org.mtvs.backend.checklist.dto.CheckListResponse;
 import org.mtvs.backend.checklist.model.CheckList;
 import org.mtvs.backend.checklist.repository.CheckListRepository;
-import org.mtvs.backend.auth.model.User;
-import org.mtvs.backend.auth.service.AuthService;
+import org.mtvs.backend.checklist.repository.MBTIMappingRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Optional;
+
 
 @Service
 public class CheckListService {
-    private final CheckListRepository repo;
-    private final AuthService authService;    // UserRepository 대신 AuthService 사용
 
-    public CheckListService(CheckListRepository repo, AuthService authService) {
-        this.repo = repo;
-        this.authService = authService;
-    }
+    @Autowired
+    private UserRepository userRepo;
+    @Autowired
+    private CheckListRepository checkListRepo;
+    @Autowired
+    private MBTIMappingRepository mbtiMappingRepo;
 
-    public CheckListResponse create(String username, CheckListRequest req) {
-        User user = authService.findByUsername(username);  // Optional 풀고 예외처리
+    // 기존 repo, userRepo 주입 생략
+
+    @Transactional
+    public CheckListResponse create(CheckListRequest req, String username) {
+        User user = userRepo.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
+
         CheckList entity = new CheckList();
         entity.setUser(user);
         entity.setMoisture(req.getMoisture());
         entity.setOil(req.getOil());
         entity.setSensitivity(req.getSensitivity());
         entity.setTension(req.getTension());
-        CheckList saved = repo.save(entity);
+        CheckList saved = checkListRepo.save(entity);
+
+        String mbtiCode = getSkinTypeByEmail(user.getEmail());
+
+        // 4) 매핑 테이블에서 한글 SkinType(enum) 조회
+        User.SkinType newSkinType = mbtiMappingRepo.findById(mbtiCode)
+                .orElseThrow(() ->
+                        new IllegalStateException("Unknown MBTI code: " + mbtiCode))
+                .getSkinType();
+
+        // 5) 유저 엔티티에 세팅 후 저장
+        user.setSkinType(newSkinType);
+        user.setTroubles(req.getTroubles());
+        userRepo.save(user);
+
         return toDto(saved);
     }
 
-    public List<CheckListResponse> findAllForUser(String username) {
-        User user = authService.findByUsername(username);
-        return repo.findByUserOrderByCreatedAtDesc(user)
-                .stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
+    @Transactional
+    public List<CheckListResponse> findAllForCurrentUser(String username) {
+        User user = userRepo.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException(username));
+        return checkListRepo.findByUserOrderByCreatedAtDesc(user)
+                .stream().map(this::toDto).toList();
     }
 
     private CheckListResponse toDto(CheckList e) {
@@ -51,5 +77,40 @@ public class CheckListService {
         dto.setCreatedAt(e.getCreatedAt());
         return dto;
     }
+
+    public String getSkinTypeByEmail(String email) {
+        Optional<User> user = userRepo.findByEmail(email);
+        if (user.isEmpty()) {
+            throw new UsernameNotFoundException(email);
+        }
+        User userEntity = user.get();
+        String userId = userEntity.getId();
+
+        Optional<CheckList> checkList = checkListRepo.findFirstByUser_IdOrderByCreatedAtDesc(userId);
+
+        if (checkList.isEmpty()) {
+            throw new UsernameNotFoundException(email);
+        }
+
+        CheckList result = checkList.get();
+        Map<String, String> ratings = new HashMap<>();
+        // M : moisture , D : dry
+        ratings.put("moisture", result.getMoisture() >= 60 ? "M" : "D");
+        // O : oil , B : Barren(빈약함)
+        ratings.put("oil", result.getOil() >= 60 ? "O" : "B");
+        // S : sensitivity, I : Insensitive
+        ratings.put("sensitivity", result.getSensitivity() >= 60 ? "S" : "I");
+        // L : laxity(느슨함)
+        ratings.put("tension", result.getTension() >= 60 ? "T" : "L");
+
+        // 피부 타입 조합 생성 (예: MOSL, DBIL 등)
+        String skinType = ratings.get("moisture") + ratings.get("oil") +
+                          ratings.get("sensitivity") + ratings.get("tension");
+        System.out.println(skinType);
+        return skinType;
+    }
 }
+
+
+
 
